[gd_scene load_steps=6 format=3 uid="uid://c8p2dt1cvlpk3"]

[ext_resource type="Script" path="res://scenes/main_menuMusic.gd" id="1_axor4"]
[ext_resource type="AudioStream" uid="uid://bjp2euiq68qq3" path="res://assets/music/MAIN_MENU_MUSIC.mp3" id="2_ie3do"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sdo7x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ht2t"]
bg_color = Color(0.241156, 0.241156, 0.241156, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_440wq"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_axor4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.5
offset_top = -57.0
offset_right = 177.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_sdo7x")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ht2t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_440wq")
theme_override_styles/normal = SubResource("StyleBoxFlat_440wq")
text = "Start"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_sdo7x")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ht2t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_440wq")
theme_override_styles/normal = SubResource("StyleBoxFlat_440wq")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -205.0
offset_right = 157.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "The World Is Ending And Work Starts At 9"

[node name="background_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ie3do")
volume_db = -1.0
autoplay = true
attenuation = 1.42369e-05
panning_strength = 0.0
parameters/looping = true

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
